--- a/.github/workflows/flask.yml
+++ b/.github/workflows/flask.yml
@@ -26,6 +26,7 @@ jobs:
           echo "Built Successfully"
 
   test:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -45,8 +46,8 @@ jobs:
           python3 test_app.py
 
   deploy:
-    runs-on: ubuntu-latest
     needs: test
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
